# Django-CRM

./: .coverage  .coveragerc  .dockerignore  .env  .env.docker  .env.example  .envrc.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .jshintrc  .mcp.json  .pre-commit-config.yaml  .runcode.yaml  .travis.yml  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  Dockerfile-old-BKP  ENV.md  Jenkinsfile  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  README.rst  RLS_SETUP.md  Steps  TODO.md  Test Results - Test__accounts.html  Test Results - Test__accounts1.html  Test Results - Test__cases.html  Test Results - Test__cases1.html  app.json  celerybeat-schedule  coverage.xml  db.env  (+25 more)
apiv2/: main.py  (+1 more)
backend/: .env.example  .prospector.yaml  ENV.md  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  seed.md
backend/accounts/: models.py  serializer.py  swagger_params.py  tasks.py  tests_celery_tasks.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_add_tags_related_name.py  0004_remove_phonenumberfield.py  0005_add_currency_fields.py  0006_add_enterprise_constraints.py  0007_account_custom_fields.py
backend/accounts/tests/: test_accounts_api.py  test_custom_fields.py
backend/boards/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/business_hours/: apps.py  calendar.py  models.py  serializers.py  urls.py  views.py
backend/business_hours/migrations/: 0001_initial.py
backend/business_hours/tests/: conftest.py  test_api.py  test_calendar.py  test_models.py
backend/cases/: analytics.py  analytics_views.py  approval_views.py  approvals.py  apps.py  bulk_views.py  csat_views.py  escalation_views.py  import_views.py  inbound_views.py  kanban_views.py  kb_views.py  merge_views.py  models.py  notifications.py  parent_views.py  routing.py  routing_views.py  serializer.py  signals.py  solution_serializers.py  solution_views.py  swagger_params.py  tasks.py  tests_celery_tasks.py  time_entry_urls.py  time_views.py  unmerge_views.py  urls.py  views.py  watcher_views.py  workflow.py
backend/cases/inbound/: contacts.py  parser.py  pipeline.py  sns.py  spam.py  threading.py
backend/cases/migrations/: 0001_initial.py  0002_initial.py  0003_fix_contacts_related_name.py  0004_add_tags_field.py  0005_add_tags_related_name.py  0006_fix_case_type_default.py  0007_alter_case_created_by_alter_case_updated_by_and_more.py  0008_add_enterprise_constraints.py  0009_case_kanban.py  0010_reopen_policy.py  0011_case_custom_fields.py  0012_escalation.py  0013_inbound_email.py  0014_routing.py  0015_merge.py  0016_watchers.py  0017_sla_pause.py  0018_case_resolved_idx.py  0019_csatsurvey.py  0020_case_parent_is_problem.py  0021_timeentry.py  0022_approvalrule_approval_and_more.py  0023_case_merge_record.py
backend/cases/services/: billing.py  csv_import.py
backend/cases/tests/: conftest.py  test_analytics.py  test_analytics_api.py  test_approvals.py  test_audit_log.py  test_case_merge.py  test_case_solutions.py  test_cases_api.py  test_cases_bulk.py  test_cases_kanban.py  test_csat.py  test_custom_fields.py  test_escalation.py  test_import.py  test_inbound_email.py  test_internal_notes.py  test_kb_suggestions.py  test_parent_child.py  test_reopen.py  test_routing.py  test_sla_pause.py  test_solutions.py  test_time_tracking.py  test_watchers.py  test_watchers_mentions.py
backend/common/: access_decorators_mixins.py  admin.py  apps.py  audit_log.py  base.py  celery_utils.py  conditional_fields.py  custom_auth.py  custom_fields.py  custom_openapi.py  duplicate_detection.py  external_auth.py  manager.py  mixins.py  models.py  notifications.py  permissions.py  serializer.py  signals.py  status.py  swagger_params.py  tasks.py  tests_celery_tasks.py  token_generator.py  urls.py  utils.py  validators.py  views.py
backend/common/app_urls/: __init__.py
backend/common/middleware/: get_company.py  rls_context.py
backend/common/migrations/: 0001_initial.py  0002_enable_rls.py  0002_initial.py  0003_add_org_to_commentfiles.py  0004_populate_commentfiles_org_and_rls.py  (+21 more)
backend/contacts/: models.py  serializer.py  swagger_params.py  tasks.py  tests_celery_tasks.py  urls.py  views.py
backend/crm/: asgi.py  celery.py  server_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/docker/: docker-compose.yml  entrypoint.sh  wait-for-postgres.sh
backend/invoices/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  pdf.py  public_urls.py  public_views.py  seed.py  serializer.py  serializers.py  swagger_params.py  tasks.py  tests.py  tests_celery_tasks.py  tests_legacy.py  views.py
backend/leads/: apps.py  forms.py  models.py  serializer.py  services.py  swagger_params.py  tasks.py  tests_celery_tasks.py  urls.py  views.py  workflow.py
backend/macros/: apps.py  models.py  render.py  serializers.py  urls.py  views.py
backend/marketing/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/opportunity/: admin.py  apps.py  models.py  serializer.py  swagger_params.py  tasks.py  tests_celery_tasks.py  urls.py  views.py  workflow.py
backend/orders/: admin.py  apps.py  models.py
backend/scripts/: gunicorn.sh
backend/tasks/: admin.py  apps.py  celery_tasks.py  models.py  serializer.py  swagger_params.py  tests_celery_tasks.py  urls.py  views.py
backend/teams/: models.py  tasks.py  views.py
backend/templates/: magic_link_code_email.html  magic_link_email.html  root_email_template_new.html
(+2479 files in other folders)
